--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,8 +80,6 @@
 name: Auto-launch OCI free VMs
 
 on:
-  schedule:
-    - cron: '30 * * * *'   # run every hour UTC+0:30, adjust as needed
   workflow_dispatch:
 
 env:
@@ -93,6 +91,7 @@ env:
   TF_VAR_compartment_ocid:  ${{ secrets.OCI_COMPARTMENT_OCID }}
   TF_VAR_ssh_public_key:    ${{ secrets.SSH_PUBLIC_KEY }}
   TF_VAR_notify_email:      ${{ secrets.NOTIFY_EMAIL }}
+  TF_VAR_OCI_PRIVATE_KEY_B64:  ${{ secrets.OCI_PRIVATE_KEY_B64 }}
 
 jobs:
   scout:
